--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
     "description": "Mondido payment module for Magento 2.",
     "version": "1.0.0",
     "type": "magento2-module",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repo.magento.com/"
+        }
+    ],
     "authors": [
         {
             "name": "Andreas Karlsson",
@@ -18,17 +24,26 @@
         }
     ],
     "require": {
-        "php": "7.0.2|7.0.4|~7.0.6",
+        "php": "~5.6.0|~7.0.0",
         "magento/module-sales": "100.0.*",
         "magento/module-checkout": "100.0.*",
         "magento/module-payment": "100.0.*",
-        "magento/framework": "100.0.*",
-        "magento/magento-composer-installer": "100.0.*"
+        "magento/framework": "100.0.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8",
+        "phpmd/phpmd": "^2.4",
+        "squizlabs/php_codesniffer": "^2.5",
+        "sebastian/phpcpd": "^2.0"
     },
     "autoload": {
         "files": ["registration.php"],
         "psr-4": {
             "Mondido\\Mondido\\": ""
         }
+    },
+    "scripts": {
+        "phpunit": "phpunit",
+        "phpcs": "phpcs"
     }
 }
