--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
     ],
     "require": {
         "php": "~5.6.0|~7.0.0",
-        "magento/module-sales": "100.0.*",
-        "magento/module-checkout": "100.0.*",
-        "magento/module-payment": "100.0.*",
-        "magento/framework": "100.0.*"
+        "magento/module-sales": "*",
+        "magento/module-checkout": "*",
+        "magento/module-payment": "*",
+        "magento/framework": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
