Ignore warnings when checking coding standars The PSR-2 guidelines state that "Method names SHOULD NOT be prefixed with a single underscore to indicate protected or private visibility.", but Magento is stuffed with those underscores.

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,6 +3,7 @@
     <description>Mondido coding standards</description>
     <arg value="p"/>
     <arg value="v"/>
+    <arg value="n"/>
     <arg name="colors"/>
     <rule ref="PSR2"/>
     <rule ref="PEAR.Commenting.FileComment"/>
