--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -15,5 +15,6 @@
     <file>Helper</file>
     <file>Model</file>
     <file>Observer</file>
+    <file>Setup</file>
     <file>Test</file>
 </ruleset>
