--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
             <directory suffix=".php">./Helper</directory>
             <directory suffix=".php">./Model</directory>
             <directory suffix=".php">./Observer</directory>
+            <directory suffix=".php">./Setup</directory>
         </whitelist>
     </filter>
 </phpunit>
