--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "magento/module-sales": "*",
         "magento/module-checkout": "*",
         "magento/module-payment": "*",
+        "magento/module-tax": "*",
         "magento/framework": "*",
         "magento/zendframework1": "*"
     },
