--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require": {
         "php": "~5.6.0|~7.0.0",
         "magento/module-sales": "*",
+        "magento/module-sales-rule": "*",
         "magento/module-checkout": "*",
         "magento/module-payment": "*",
         "magento/module-tax": "*",
