Change name in composer.json to allow non git installs

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mondido/magento2-mondido",
+    "name": "mondido/module-mondido",
     "description": "Mondido payment module for Magento 2.",
     "version": "1.0.1",
     "type": "magento2-module",
