Revert "Change name in composer.json to allow non git installs"
This reverts commit 90b1c300bc9272c9c16133e0bbdcb7ec6f8b16fa.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mondido/module-mondido",
+    "name": "mondido/magento2-mondido",
     "description": "Mondido payment module for Magento 2.",
     "version": "1.0.1",
     "type": "magento2-module",
