--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "php": "~5.5.22|~7.0.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/module-sales": "*",
         "magento/module-sales-rule": "*",
         "magento/module-checkout": "*",
