--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
-         colors="true">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd" colors="true">
     <testsuite name="Mondido unit tests">
         <directory suffix="Test.php">Test/Unit</directory>
     </testsuite>
@@ -15,4 +13,7 @@
             <directory suffix=".php">./Setup</directory>
         </whitelist>
     </filter>
+    <php>
+        <const name="PHPUNIT_MONDIDO_TESTSUITE" value="true"/>
+    </php>
 </phpunit>
